--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -2,13 +2,19 @@ name: Build test
 
 on:
   push:
-    branches:
+    branches:    
+      - '*'         # matches every branch that doesn't contain a '/'
+      - '*/*'       # matches every branch containing a single '/'
       - '**'        # matches every branch
       - '!main'     # excludes main
       - '!dev-nightly'     # excludes nightly
 
   pull_request:
     branches: [ "main", "dev-nightly" ]
+  
+  workflow_dispatch:
+
+
 
 jobs:
   build:
@@ -16,38 +22,31 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        dotnet-version: ['7.0.x']
+        dotnet-version: ['6.0.x']
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Setup .NET
-      uses: actions/setup-dotnet@v2
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version:  ${{ matrix.dotnet-version }}
-    
-    - name: Initialise submodules
-      run: git submodule update --init
-
     - name: Restore dependencies
       run: dotnet restore
-
     - name: Restore nuget packages
       run: nuget restore
-
-    - name: Build
-      run: .\build.cmd
-
+    - name: Build client and installer
+      run: dotnet build RageCoop.Client.Installer/RageCoop.Client.Installer.csproj --configuration Release -o bin/Release/Client/RageCoop
+    - name: Build server win-x64
+      run: dotnet build RageCoop.Server/RageCoop.Server.csproj -o bin/Release/Server
     - name: Upload server
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: RageCoop.Server
         path: bin/Release/Server
-
     - name: Upload Client
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: RageCoop.Client
         path: bin/Release/Client
-
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       
